== 0.3.1 2008-??-??

* Minor enhancements:
  * Uncommunicative Name now checks instance variables more thoroughly

== 0.3.0 2008-11-02

* Minor enhancements:
  * New smell: first naive checks for Control Couple
  * reek now only checks sources passed on the command line
  * Code snippets can be supplied on the commandline
  * Added headings and warnings count when smells in multiple files
  * Added Reek::RakeTask to run reek from rakefiles
* Tweaks:
  * Fixed: Returns exit status 2 when smells are reported
  * Fixed: no longer claims an empty method is a Utility Function

== 0.2.3 2008-09-22

* Minor enhancements:
  * Only reports Feature Envy when the method isn't a Utility Function
  * General improvements to assessing Feature Envy
* Tweaks:
  * Fixed: coping with parameterless yield call
  * Fixed: copes with :self as an expression
  * Fixed: displaying the receiver of many more kinds of Feature Envy
  * Fixed: Large Class calculation for Object

== 0.2.2 2008-09-15

* Tweaks:
  * Fixed --version!

== 0.2.1 2008-09-14

* Tweaks:
  * Now works from the source code, instead of requiring each named file
  * Added integration tests that run reek on a couple of gems

== 0.2.0 2008-09-10

* Minor enhancements:
  * Added --help, --version options
  * Added --sort option to sort the report by smell or by code location

== 0.1.1 2008-09-09

* Some tweaks:
  * Fixed report printing for Feature Envy when the receiver is a block
  * Fixed: successive iterators reported as nested
  * Fixed: Long Method now reports the total length of the method
  * Fixed: each smell reported only once

== 0.1.0 2008-09-09

* 1 minor enhancement:
  * Added a check for nested iterators within a method
* Some tweaks:
  * Begun adding some rdoc
  * Split some of the specs into more meaningful chunks
  * Updated the rakefile so that rcov is no longer the default

== 0.0.1 2008-09-08

* 1 major enhancement:
  * Initial release