@@ -2,6 +2,7 @@
 
 * Minor enhancements:
   * Uncommunicative Name now checks instance variables more thoroughly
+  * Uncommunicative Name now warns about names of the form 'x2'
 
 == 0.3.0 2008-11-02
 
